--- a/src/assets/scss/dashbord.scss
+++ b/src/assets/scss/dashbord.scss
@@ -1,20 +1,50 @@
-.main-dashboard{
+.main-dashboard {
+  width: 100%;
 
-    width: 100%;
-   
-    max-width: 1600px;
-    margin: auto;
+  max-width: 1600px;
+  margin: auto;
 
-    .main-category{
-       
+  .main-category {
     height: 100px;
     background: white;
     display: flex;
+  }
+  .sub_category {
+    margin: 0 40px;
+  }
+  .main_carasoal {
+    margin-top: 20px;
+  }
+
+  .main_product {
+    margin-top: 20px;
+
+    .add_product{
+        display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+     button{
+
+        background: black;
+    color: white;
+    padding: 6px 35px;
+    border-radius: 15px;
+    cursor: pointer;
+     }
     }
-    .sub_category{
-        margin: 0 40px;
+    .sub_product {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      background: white;
+      grid-column-gap: 50px;
+      grid-row-gap: 60px;
     }
-    .main_carasoal{
-        margin-top: 20px;
+    .productlist {
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      padding: 20px 20px 20px 20px;
+      width: auto;
+      height: auto;
+      cursor: pointer;
     }
+  }
 }
