--- a/src/assets/scss/dashbord.scss
+++ b/src/assets/scss/dashbord.scss
@@ -45,6 +45,17 @@
       width: auto;
       height: auto;
       cursor: pointer;
+      .btn-delete{
+        margin-top: 10px;
+        button{
+          background: black;
+    border-radius: 10px;
+    color: white;
+    padding: 7px;
+    margin-right: 7px;
+    cursor: pointer;
+        }
+      }
     }
   }
 }
