--- a/src/assets/scss/product.scss
+++ b/src/assets/scss/product.scss
@@ -1,15 +1,90 @@
-.product-add{
-    text-align: center;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    max-width: 450px;
-    margin: auto;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px;
-    .sub_product{
+.product-add {
+  text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  max-width: 450px;
+  margin: auto;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px;
+  .sub_product {
+    margin-bottom: 10px;
+  }
+}
 
-        margin-bottom: 10px;
+// product detail
+
+.product-main {
+  h2 {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  .product-detail {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    max-width: 970px;
+    margin: auto;
+    background: white;
+    padding: 30px;
+    .image {
+      img {
+        width: 150px;
+        height: 150px;
+      }
+      .allbtn {
+        margin-top: 15px;
+        .addtocart {
+          background: #ff9f00;
+          /* border: navajowhite; */
+          border: none;
+          padding: 10px;
+          border-radius: 6px;
+          margin-right: 9px;
+          color: white;
+          cursor: pointer;
+        }
+        .buynow {
+          background: #fb641b;
+          /* border: navajowhite; */
+          border: none;
+          padding: 10px;
+          border-radius: 6px;
+          margin-right: 9px;
+          color: white;
+          cursor: pointer;
+        }
+      }
     }
+  }
+  .detail-page {
+    .heading {
+      margin-bottom: 10px;
+      p {
+        font-size: 25px;
+        font-weight: 400;
+      }
+    }
+
+    .review-cls {
+      display: flex;
+      margin-bottom: 8px;
+      .review {
+        background: green;
+        width: 35px;
+        color: white;
+        text-align: center;
+        border-radius: 6px;
+        margin-right: 10px;
+      }
+    }
+    .price {
+      p {
+        font-size: 25px;
+        font-weight: 500;
+      }
+    }
+  }
 }
